Backdrop filter cleanup

This CL is just a cleanup. Renaming "BackgroundFilter" to
"BackdropFilter" in several places, removing unused arguments, etc.
I also made the backdrop-filter-clip-rect test a little more sensitive
to orientation - the four rounded corners are different.

No behavior should change with this CL.

Bug: 618913
Change-Id: Idf23358cc81ed93bb0c8e744133fcbe4e6d46f46
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1542366
Commit-Queue: Mason Freed <masonfreed@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Auto-Submit: Mason Freed <masonfreed@chromium.org>
Cr-Commit-Position: refs/heads/master@{#646548}
Former-commit-id: 19dd3bcdfed8ba7c77cd6b69900bddc7d040acc9